fixed issue with .env by adding node: true in eslint

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL =
+MONGO_URI =
 "mongodb+srv://learnica:weeklywords900110@weekly-words.ntcwupi.mongodb.net/?retryWrites=true&w=majority&appName=weekly-words"
