--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "concurrently": "^8.2.2",
     "animate.css": "^4.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
