--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "main": "node dist/index.html",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "nodemon server/index.js",
-    "start": "concurrently \"npm:server\" \"npm:dev\""
+    "start": "index.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
