--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "main": "node dist/index.html",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "nodemon server/index.js",
-    "start": "server/index.js"
+    "start": "concurrently --kill-others \"npm:server\" \"npm:dev\""
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
