--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI =
 "mongodb+srv://learnica:weeklywords900110@weekly-words.ntcwupi.mongodb.net/?retryWrites=true&w=majority&appName=weekly-words"
+
+PORT = 6541
