--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "server/index.js",
+  "main": "node dist/index.html",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
